[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/resources/tar.png" type="Texture" id=1]
[ext_resource path="res://Styles/Buttons/pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://Styles/Buttons/norm.tres" type="StyleBox" id=3]
[ext_resource path="res://Styles/Buttons/hover.tres" type="StyleBox" id=4]
[ext_resource path="res://Scripts/upgrade/upgrade.gd" type="Script" id=5]
[ext_resource path="res://Sprites/misc/newupgradeafford.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.3 )
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.4, 0.4, 0.4, 1 )
shadow_color = Color( 0.4, 0.4, 0.4, 1 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0 )
draw_center = false
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
shadow_color = Color( 1, 1, 1, 0.94902 )
shadow_size = 3

[node name="upgrade" type="Button"]
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 45, 45 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="."]
position = Vector2( 22.5, 23 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 1 )

[node name="shadow" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="afford_alert" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.917647, 0.258824, 1 )
show_behind_parent = true
position = Vector2( 61, 10 )
texture = ExtResource( 6 )
[connection signal="button_down" from="." to="." method="_on_buy_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_buy_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_buy_pressed"]
